# ioh-robodog-webrtc

./: .dockerignore  CMakeLists.txt  Dockerfile  config.yaml
src/: config.cpp  config.hpp  http_server.cpp  http_server.hpp  logger.hpp  main.cpp  peer_connection.cpp  peer_connection.hpp  rtsp_pipeline.cpp  rtsp_pipeline.hpp  signaling_server.cpp  signaling_server.hpp  webrtc_server.cpp  webrtc_server.hpp
systemd/: stream-server.service
web/: embed.html  index.html
